--- a/learn-certs-pr/mos-outlook-2016/index.yml
+++ b/learn-certs-pr/mos-outlook-2016/index.yml
@@ -1,20 +1,25 @@
 ### YamlMime:Certification
-title: 'Microsoft Office Specialist: Microsoft Outlook 2016'
+title: 'Microsoft Office Specialist: Microsoft Word 2016'
 metadata:
-  title: 'Microsoft Office Specialist: Microsoft Outlook 2016'
-  description: 'Microsoft Office Specialist: Microsoft Outlook 2016'
+  title: 'Microsoft Office Specialist: Microsoft Word 2016'
+  description: 'Microsoft Office Specialist: Microsoft Word 2016'
+  ms.openlocfilehash: c3fdfafbd1b14a421e871f53ac4faaadba22015e
+  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/14/2021
+  ms.locfileid: "132111263"
 uid: certification.mos-outlook-2016
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: |-
-  Zeigen Sie, dass Sie über die erforderlichen Fähigkeiten verfügen, Outlook optimal zu nutzen, indem Sie eine Microsoft Office Specialist (MOS) 2016-Zertifizierung erwerben. Erfolgreiche Kandidaten erstellen und bearbeiten professionell aussehende E-Mail-Nachrichten, verwalten zeitzonenübergreifende Kalender und planen Aufgaben für eine Vielzahl von Zweckenund Situationen.
-subTitle: Diese Zertifizierung zeigt, dass Sie die erforderlichen Fähigkeiten haben, um das Beste aus Office herauszuholen, wenn Sie eine Microsoft Office Specialist (MOS) Zertifizierung in einem bestimmten Office-Programm erhalten.
+summary: Zeigen Sie, dass Sie über die zur optimalen Nutzung von Outlook erforderlichen Fähigkeiten verfügen, indem Sie eine MOS 2016-Zertifizierung (Microsoft Office Specialist) erwerben. Erfolgreiche Kandidaten erstellen und bearbeiten professionell aussehende E-Mail-Nachrichten, verwalten zeitzonenübergreifende Kalender und planen Aufgaben für eine Vielzahl von Zweckenund Situationen.
+subTitle: Diese Zertifizierung zeigt, dass Sie die erforderlichen Fähigkeiten haben, um das Beste aus Office herauszuholen, indem Sie eine Microsoft Office Specialist (MOS) Zertifizierung in einem bestimmten Office-Programm erhalten.
 levels:
 - intermediate
 skills:
-- Die Outlookumgebung im Hinblick auf bessere Produktivität verwalten
-- Verwalten von Datenbanken
-- Zeitpläne verwalten
-- Verwalten von Kontakten und Gruppen
+- Manage the Outlook environment for productivity
+- Manage messages
+- Manage schedules
+- Manage contacts and groups
 roles:
 - business-user
 type: mos
@@ -23,10 +28,10 @@ products:
 exams:
 - uid: exam.77-731
 resources:
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfungswiederholung
+  href: https://aka.ms/TrainingCertDeck
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung von Zertifizierungen
@@ -35,6 +40,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Ihrer Zertifizierungsbadges
+  description: Feiern Sie Ihren Erfolg in Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise LinkedIn oder Ihrem Lebenslauf hinzu.
   href: ../badges.md
