--- a/learn-certs-pr/courses/az-900t00.yml
+++ b/learn-certs-pr/courses/az-900t00.yml
@@ -1,10 +1,17 @@
 ### YamlMime:Course
-title: Microsoft Azure Fundamentals (2 Day)
+title: Microsoft Azure Fundamentals (2 Tage)
 metadata:
-  title: 'Course AZ-900T00-A: Microsoft Azure Fundamentals (2 Day)'
-  description: 'Course AZ-900T00-A: Microsoft Azure Fundamentals (2 Day)'
+  title: 'Kurs AZ-900T00-A: Grundlagen zu Microsoft Azure (2 Tage)'
+  description: 'Kurs AZ-900T00-A: Grundlagen zu Microsoft Azure (2 Tage)'
+  iltScheduling: true
+  ms.openlocfilehash: 1abf94e725a03b944996c5d53f0914b252793575
+  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/14/2021
+  ms.locfileid: "132107571"
 uid: course.az-900t00
-courseNumber: 'AZ-900T00-A'
+courseNumber: AZ-900T00-A
 hoursToComplete: 48
 iconUrl: /media/learn/certification/course.svg
 learningPartnersLink: /learn/certifications/partners
@@ -35,110 +42,14 @@ products:
 - azure
 exams:
 - uid: exam.az-900
-summary: |-
-  Dieser zweitägige Kurs vermittelt grundlegende Kenntnisse über die wichtigsten Azure-Konzepte. Azure-Kernservices; Kernlösungen und Management-Tools; allgemeine Sicherheit und Netzwerksicherheit; Governance-, Datenschutz- und Compliance-Funktionen; Azure-Kostenmanagement- und Servicevereinbarungen.
-  Hinweis&#58; Dieser Kurs bietet einen Azure-Pass und Zeit für die Teilnahme an praktischen Übungen. Wenn Sie keine praktische Erfahrung benötigen, sollten Sie den Kurs AZ -900T01&#58; Microsoft Azure Fundamentals (1 Tag) in Betracht ziehen. Der Inhalt für beide Kurse richtet sich nach der Zieldomäne der AZ-900-Prüfung.
+summary: >-
+  Dieser zweitägige Kurs vermittelt grundlegende Kenntnisse zu den wichtigsten Konzepten und Diensten von Azure, zu wichtigsten Lösungen und Verwaltungstools, zur allgemeinen Sicherheit und Netzwerksicherheit, zu Governance-, Datenschutz- und Compliancefeatures, zur Azure-Kostenverwaltung und zu Vereinbarungen zum Servicelevel.
 
-  #### Zielgruppenprofil
-  Dieser Kurs eignet sich für IT-Mitarbeiter, die gerade erst mit Azure arbeiten. Dieses Publikum möchte mehr über unsere Angebote erfahren und praktische Erfahrungen mit dem Produkt sammeln. Dieser Kurs verwendet hauptsächlich das Azure-Portal zum Erstellen von Diensten und erfordert keine Skriptkenntnisse.  Die Teilnehmer dieses Kurses gewinnen Vertrauen in andere rollenbasierte Kurse und Zertifizierungen, z. B. Azure Administrator. Dieser Kurs bietet einen Azure-Pass und eine optionale Laborumgebung. Dieser Kurs kombiniert Vorlesungen, Demonstrationen und praktische Übungen.  Dieser Kurs hilft auch dabei, jemanden auf die AZ-900-Prüfung vorzubereiten.
-prerequisitesSection: |-
-  Es gibt keine Voraussetzungen für die Teilnahme am Kurs. Allerdings ist die technisches Wissen Ein Schüler hat umso mehr Verständnis für die Cloud.
-outlineSection: |-
-  ### Modul 1&#58; Beschreiben der wichtigsten Azure-Konzepte
-  In diesem Modul erhalten Sie einen umfassenden Einblick in Azure und seine Funktionen, der Ihnen eine solide Grundlage für die Vervollständigung der verfügbaren Module für Azure Fundamentals bietet.
-  #### Lektionen
-  - Einführung in die Azure-Grundlagen
-  - Erläutern Sie grundlegende Azure-Konzepte
-  - Beschreiben der wichtigsten Azure-Architekturkomponenten
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Grundlegendes zu den Vorteilen von Cloud Computing in Azure und wie Sie Zeit und Geld sparen können
-  - Erläutern von Konzepten wie Hochverfügbarkeit, Skalierbarkeit, Elastizität, Agilität und Notfallwiederherstellung
-  - Beschreiben der wichtigsten Azure-Architekturkomponenten wie Abonnements, Verwaltungsgruppen, Ressourcen und
-  - Geografische Verteilungskonzepte wie Azure-Regionen, Regionspaare und Verfügbarkeitszonen zusammenfassen
+  Hinweis&#58; Dieser Kurs bietet einen Azure-Pass und Zeit für die Teilnahme an praktischen Übungen. Wenn Sie keine praktische Erfahrung benötigen, sollten Sie den Kurs AZ -900T01: Microsoft Azure Fundamentals (1 Tag) in Betracht ziehen. Der Inhalt für beide Kurse richtet sich nach der Zieldomäne der AZ-900-Prüfung.
 
 
-  ### Modul 2&#58; Beschreiben der Azure-Kernservices
-  In diesem Modul erfahren Sie mehr über Azure-Kernservices wie Azure-Datenbank, Azure-Computing, Azure-Speicher und Azure-Netzwerk.
-  #### Lektionen
-  - Erkunden Sie die Azure-Datenbank- und Analyseservices
-  - Erkunden Sie die Azure-Rechenservices
-  - Erkunden Sie die Azure-Speicherservices
-  - Erkunden Sie die Azure-Netzwerkservices
+  #### <a name="audience-profile"></a>Zielgruppenprofil
 
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Verstehen Sie die Breite der in Azure verfügbaren Services, einschließlich Computer, Netzwerk, Speicher und Daten
-  - Identifizieren Sie Virtualisierungs-Services wie Azure Virtual Machines, Azure Container Instances und Azure Ku
-  - Vergleichen Sie die Azure-Datenbankservices wie Azure Cosmos DB, Azure SQL, Azure-Datenbank für MySQL und Azur
-  - Untersuchen Sie Azure-Netzwerkressourcen wie virtuelle Netzwerke, VPN-Gateways und Azure ExpressRoute
-  - Fassen Sie Azure-Speicherservices wie Azure Blob-Speicher, Azure-Festplattenspeicher und Azure-Dateispeicher zusammen
-
-  ### Modul 3&#58; Kernlösungen und Verwaltungstools in Azure beschreiben
-  In diesem Modul lernen Sie das maschinelle Lernen von KI, Azure DevOps, die Grundlagen der Überwachung, die Grundlagen der Verwaltung, die Grundlagen des serverlosen Computing und IoT-Grundlagen kennen.
-  #### Lektionen
-  - Wählen Sie den besten KI-Service für Ihre Bedürfnisse
-  - Wählen Sie die besten Tools aus, mit denen Unternehmen bessere Lösungen entwickeln können
-  - Wählen Sie den besten Überwachungsservice für Sichtbarkeit, Einblick und Ausfallminderung
-  - Wählen Sie die besten Tools zum Verwalten und Konfigurieren Ihrer Azure-Umgebung aus
-  - Wählen Sie die beste servierlose Azure-Technologie für Ihr Geschäftsszenario
-  - Wählen Sie den besten Azure IoT-Service für Ihre Anwendung aus
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Wählen Sie den richtigen Azure Service für künstliche Intelligenz aus, um verschiedene Arten geschäftlicher Herausforderungen zu lösen
-  - Wählen Sie die besten Tools und Services für den Softwareentwicklungsprozess für ein bestimmtes Geschäftsszenario aus.
-  - Wählen Sie den richtigen Cloud-Überwachungsservice, um verschiedene geschäftliche Herausforderungen zu bewältigen.
-  - Wählen Sie das richtige Azure-Verwaltungstool aus, um verschiedene technische Anforderungen und Herausforderungen zu erfüllen
-  - Wählen Sie die richtige serverlose Computertechnologie für Ihr Geschäftsszenario.
-  - Wählen Sie den besten Azure IoT-Service für ein bestimmtes Geschäftsszenario aus.
-
-  ### Modul 4&#58; Beschreiben der allgemeinen Sicherheits- und Netzwerksicherheitsfunktionen
-  In diesem Modul erfahren Sie, wie Sie sich vor Sicherheitsbedrohungen schützen und Ihre Netzwerke mit Azure schützen können.
-  #### Lektionen
-  - Schützen Sie Azure vor Sicherheitsbedrohungen
-  - Sichere Netzwerkverbindung in Azure
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Stärken Sie Ihre Sicherheitslage und schützen Sie sich mit Hilfe des Azure Security Centers vor Bedrohungen.
-  - Sammeln und verarbeiten Sie Sicherheitsdaten aus vielen verschiedenen Quellen mit Hilfe von Azure Sentinel.
-  - Verwalten Sie dedizierte physische Server zum Hosten Ihrer Azure-VMs für Windows und Linux, mit Hilfe von Azure Dedica
-  - Identifizieren Sie die Ebenen, aus denen sich eine Strategie der Tiefenverteidigung zusammensetzt.
-  - Erläutern Sie, wie Sie mit der Azure-Firewall steuern können, welcher Datenverkehr im Netzwerk zulässig ist.
-  - Konfigurieren Sie Netzwerksicherheitsgruppen, um den Netzwerkverkehr zu und von Azure-Ressourcen in einem Mikrofon zu filtern
-  - Erläutern Sie, wie Azure DDoS Protection Ihre Azure-Ressourcen vor DDoS-Angriffen schützt.
-
-  ### Modul 5&#58; Beschreiben von Identitäts-, Governance-, Datenschutz- und Compliance-Funktionen
-  In diesem Modul erfahren Sie mehr über Azure-Identitätsservices, das Erstellen einer Cloud-Governance-Strategie sowie Datenschutz-, Compliance- und Datenschutzstandards für Azure.
-  #### Lektionen
-  - Sicherer Zugriff auf Ihre Anwendungen mit Hilfe von Azure-Identitätsservices
-  - Erstellen Sie eine Cloud-Governance-Strategie für Azure
-  - Überprüfen Sie die Datenschutz-, Compliance- und Datenschutzstandards in Azure
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Erläutern Sie den Unterschied zwischen Authentifizierung und Autorisierung.
-  - Beschreiben, wie Azure Active Directory die Identitäts- und Zugriffsverwaltung bereitstellt.
-  - Erläutern Sie die Rolle von Single Sign-On (SSO), Multifaktorauthentifizierung und bedingtem Zugriff.
-  - Treffen Sie mit Hilfe von CAF für Azure organisatorische Entscheidungen über Ihre Cloud-Umgebung.
-  - Definieren Sie mit Hilfe der rollenbasierten Azure-Zugriffssteuerung, wer auf Cloud-Ressourcen zugreifen kann.
-  - Wenden Sie eine Ressourcensperre an, um ein versehentliches Löschen Ihrer Azure-Ressourcen zu verhindern.
-  - Wenden Sie Tags für Ihre Azure-Ressourcen an, um deren Zweck zu beschreiben.
-  - Steuern und überwachen Sie, wie Ihre Ressourcen mit Hilfe der Azure-Richtlinie erstellt werden.
-  - Aktivieren Sie die Governance über mehrere Azure-Abonnements hinweg, mit Hilfe von Azure Blaupausen.
-  - Erläutern Sie die Arten von Compliance-Angeboten, die in Azure verfügbar sind.
-  - Erhalten Sie Einblick in gesetzliche Standards und Compliance in Azure.
-  - Erläutern Sie die für Regierungsbehörden spezifischen Azure-Funktionen.
-
-  ### Modul 6&#58; Beschreiben von Azure-Kostenmanagement- und Service Level-Vereinbarungen
-  In diesem Modul erfahren Sie, wie man Azure-Kosten planen und verwalten und die richtigen Azure-Services über SLAs und den Servicelebenszyklus auswählen kann.
-  #### Lektionen
-  - Planen und verwalten Sie Ihre Azure-Kosten
-  - Wählen Sie die richtigen Azure-Services aus, indem Sie die SLAs und den Dienstlebenszyklus untersuchen
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Verwenden Sie den Rechner für die Gesamtbetriebskosten.
-  - Beschreiben der verschiedenen Möglichkeiten, wie Sie Azure-Produkte und -Services erwerben können.
-  - Verwenden Sie den Preisrechner, um die monatlichen Kosten für die Ausführung Ihrer Cloud-Workloads zu schätzen.
-  - Definieren Sie die Hauptfaktoren, die sich auf die Gesamtkosten auswirken, und wenden Sie empfohlene Vorgehensweisen an, um die Kosten zu minimieren.
-  - Beschreiben Sie, was ein Servicevertrag (SLA) ist und warum SLAs wichtig sind.
-  - Identifizieren Sie Faktoren wie die von Ihnen ausgewählte Serviceebene, die sich auf eine SLA auswirken können. 
-  - Kombinieren Sie SLAs, um eine zusammengesetzte SLA zu berechnen.
-  - Beschreiben Sie den Servicelebenszyklus in Azure.
+  Dieser Kurs eignet sich für IT-Mitarbeiter, die gerade erst mit Azure arbeiten. Dieses Publikum möchte mehr über unsere Angebote erfahren und praktische Erfahrungen mit dem Produkt sammeln. Dieser Kurs verwendet hauptsächlich das Azure-Portal zum Erstellen von Diensten und erfordert keine Skriptkenntnisse. Die Teilnehmer dieses Kurses gewinnen Vertrauen in andere rollenbasierte Kurse und Zertifizierungen, z. B. Azure Administrator. Dieser Kurs bietet einen Azure-Pass und eine optionale Laborumgebung. Dieser Kurs kombiniert Vorlesungen, Demonstrationen und praktische Übungen. Dieser Kurs hilft auch dabei, jemanden auf die AZ-900-Prüfung vorzubereiten.
+prerequisitesSection: Es gibt keine Voraussetzungen für die Teilnahme am Kurs. Je mehr technisches Wissen die Kursteilnehmer jedoch haben, desto besser werden sie die Cloud verstehen.
+outlineSection: "### <a name=\"module-158-describe-core-azure-concepts\"></a>Modul 1&#58; Beschreiben der wichtigsten Azure-Konzepte\nIn diesem Modul erhalten Sie einen allgemeinen Überblick für Einsteiger über Azure und die dort verfügbaren Funktionen. Es stellt eine solide Grundlage für die Bearbeitung der verfügbaren Module zu Azure-Grundlagen dar.\n#### <a name=\"lessons\"></a>Lektionen\n- Einführung in Azure-Grundlagen\n- Grundlegende Konzepte von Azure\n- Beschreiben der wichtigsten Architekturkomponenten in Azure\n\nNach Abschluss dieses Moduls können die Schüler:\n- Die Vorteile des Cloud Computing in Azure (z. B. Zeit- und Geldersparnis)\n- Vermitteln von Konzepten wie Hochverfügbarkeit, Skalierbarkeit, Elastizität, Agilität und Notfallwiederherstellung\n- Beschreiben der Azure-Architekturkomponenten, z. B. Abonnements, Verwaltungsgruppen und Ressourcen \n- Zusammenfassen von Konzepten zur geografischen Verteilung, z. B. Azure-Regionen, Regionspaare und Verfügbarkeitszonen\n\n\n### <a name=\"module-258-describe-core-azure-services\"></a>Modul 2&#58: Beschreiben der wichtigsten Azure-Dienste\nIn diesem Modul erfahren Sie mehr über die wichtigsten Azure-Dienste wie Azure-Datenbank, Azure Compute, Azure Storage und Azure-Netzwerk.\n#### <a name=\"lessons\"></a>Lektionen\n- Einführung in Azure-Datenbank- und Analysedienste\n- Erkunden von Azure-Computediensten\n- Informationen zu Azure Storage-Diensten\n- Grundlagen zu Azure-Netzwerkdiensten\n\nNach Abschluss dieses Moduls können die Schüler:\n- Kenntnis des in Azure verfügbaren umfangreichen Dienstangebots für Computing, Netzwerke, Speicher und Datenbanken\n- Identifizieren von Virtualisierungsdiensten wie Azure Virtual Machines, Azure Container Instances und Azure Kubernetes\n- Vergleichen der Azure-Datenbankdienste wie Azure Cosmos DB, Azure SQL und Azure Database for MySQL\n- Überprüfen der Azure-Netzwerkressourcen wie virtuelle Netzwerke, VPN-Gateways und Azure ExpressRoute\n- Zusammenfassen der Azure-Speicherdienste wie Azure Blob Storage, Azure Disk Storage und Azure File Storage\n\n### <a name=\"module-358-describe-core-solutions-and-management-tools-on-azure\"></a>Modul 3&#58; Beschreiben der wichtigsten Lösungen und Verwaltungstools in Azure\nIn diesem Modul erfahren Sie mehr über maschinelles Lernen mit KI, Azure DevOps, Grundlagen der Überwachung, Grundlagen der Verwaltung, Grundlagen des serverloses Computings und Grundlagen des Internets der Dinge (IoT).\n\n#### <a name=\"lessons\"></a>Lektionen\n- Auswählen der besten KI-Dienste für Ihre Anforderungen\n- Entscheidung für geeignete Tools, mit denen Organisationen bessere Lösungen entwickeln können\n- Auswählen des besten Überwachungsdiensts für Sichtbarkeit und Erkenntnisse sowie zur Entschärfung von Ausfällen\n- Auswählen des besten Tools zum Verwalten und Konfigurieren Ihrer Azure-Umgebung\n- Auswählen der besten serverlosen Azure-Technologie für Ihr Geschäftsszenario\n- Auswählen des besten Azure IoT-Diensts für Ihre Anwendung\n\nNach Abschluss dieses Moduls können die Schüler:\n- Auswählen des geeigneten KI-Diensts in Azure für unterschiedliche geschäftliche Herausforderungen\n- Sie können die besten Tools und Dienste für den Softwareentwicklungsprozess für ein bestimmtes Geschäftsszenario auswählen.\n- Sie können den richtigen Cloudüberwachungsdienst auswählen, um unterschiedliche geschäftliche Herausforderungen zu erfüllen.\n- Auswählen des richtigen Azure-Verwaltungstools für verschiedene technische Anforderungen und Herausforderungen\n- Sie können die richtige Technologie für serverloses Computing für Ihr Geschäftsszenario auswählen.\n- Zuletzt können Sie den besten Azure IoT-Dienst für ein bestimmtes Geschäftsszenario auswählen.\n\n### <a name=\"module-458-describe-general-security-and-network-security-features\"></a>Modul 4&#58; Beschreiben der Features für allgemeine Sicherheit und Netzwerksicherheit\nIn diesem Modul erfahren Sie, wie Sie sich vor Sicherheitsbedrohungen schützen und Ihre Netzwerke mit Azure sichern.\n#### <a name=\"lessons\"></a>Lektionen\n- Schutz vor Sicherheitsbedrohungen in Azure\n- Sichere Netzwerkkonnektivität in Azure\n\nNach Abschluss dieses Moduls können die Schüler:\n- Stärken Ihres Sicherheitsstatus und Schützen vor Bedrohungen mithilfe des Azure Security Center\n- Sammeln von Sicherheitsdaten aus verschiedenen Quellen mithilfe von Azure Sentinel und anschließendes Ergreifen von Maßnahmen\n- Verwalten dedizierter physischer Server zum Hosten Ihrer Azure-VMs für Windows und Linux mithilfe von Azure Dedicated Host\n- Identifizieren der Schichten einer *Defense-in-Depth*-Strategie.\n- Erklären, wie mit Azure Firewall gesteuert werden kann, welcher Datenverkehr im Netzwerk zulässig ist\n- Konfigurieren von Netzwerksicherheitsgruppen zum Filtern des Netzwerkdatenverkehrs zwischen Azure-Ressourcen\n- Erklären, wie Azure DDoS Protection Sie beim Schutz Ihrer Azure-Ressourcen vor DDoS-Angriffen unterstützt\n\n### <a name=\"module-558-describe-identity-governance-privacy-and-compliance-features\"></a>Modul 5&#58; Beschreiben der Features für Identität, Governance, Datenschutz und Compliance\nIn diesem Modul erfahren Sie mehr über Azure-Identitätsdienste, das Entwickeln einer Cloudgovernancestrategie sowie Datenschutz-, Compliance- und Sicherheitsstandards in Azure.\n#### <a name=\"lessons\"></a>Lektionen\n- Sichern des Zugriffs auf Ihre Anwendungen mithilfe von Azure-Identitätsdiensten\n- Erstellen einer Strategie für Cloudgovernance in Azure\n- Überprüfen von Datenschutz- und Compliancestandards in Azure\n\nNach Abschluss dieses Moduls können die Schüler:\n- Erläutern des Unterschieds zwischen Authentifizierung und Autorisierung.\n- Beschreiben, wie Azure Active Directory Identitäts- und Zugriffsverwaltung bereitstellt.\n- Erläutern, welche Rolle das einmalige Anmelden (Single Sign-On, SSO), die mehrstufige Authentifizierung und der bedingte Zugriff spielen\n- Treffen von organisatorischen Entscheidungen für Ihre Cloudumgebung mithilfe des CAF für Azure\n- Definieren, wer auf Cloudressourcen zugreifen kann, mithilfe von rollenbasierter Azure-Zugriffssteuerung.\n- Anwenden einer Ressourcensperre, um ein versehentliches Löschen kritischer Azure-Ressourcen zu verhindern.\n- Anwenden von Tags auf Ihre Azure-Ressourcen an, um ihren Zweck zu beschreiben.\n- Steuern und Überwachen mit Azure Policy, wie Ihre Ressourcen erstellt werden.\n- Aktivieren von entsprechender Governance über mehrere Azure-Abonnements hinweg mithilfe von Azure Blueprints.\n- Erläutern der Typen von Complianceangeboten, die in Azure zur Verfügung stehen.\n- Gewinnen von Einblicken in rechtliche Normen und Compliance in Azure\n- Erläutern der Azure-Funktionen, die für Regierungsbehörden spezifisch sind.\n\n### <a name=\"module-658-describe-azure-cost-management-and-service-level-agreements\"></a>Modul 6&#58; Beschreiben von Azure-Kostenmanagement und Vereinbarungen zum Servicelevel\nIn diesem Modul erfahren Sie, wie Sie Azure-Kosten planen und verwalten und wie Sie über SLAs und den Dienstlebenszyklus die richtigen Azure-Dienste auswählen.\n#### <a name=\"lessons\"></a>Lektionen\n- Planen und Verwalten Ihrer Azure-Kosten\n- Auswählen der richtigen Azure-Dienste durch Untersuchen der SLAs und des Dienstlebenszyklus\n\nNach Abschluss dieses Moduls können die Schüler:\n- Verwenden des Gesamtkostenrechners\n- Beschreiben der unterschiedlichen Arten, in denen Sie Azure-Produkte und -Dienste kaufen können.\n- Verwenden des Preisrechners, um die monatlichen Kosten der Ausführung Ihrer Cloudworkloads abzuschätzen.\n- Definieren der Hauptfaktoren, die sich auf die Gesamtkosten auswirken, sowie Anwenden empfohlener Vorgehensweisen zum Minimieren von Kosten\n- Beschreiben, was eine Vereinbarung zum Service Level (SLA) ist, und warum SLAs wichtig sind.\n- Identifizieren von Faktoren, z. B. der von Ihnen gewählten Dienstebene, die sich auf eine SLA auswirken können.\n- Kombinieren Sie SLAs, um eine zusammengesetzte SLA zu berechnen.\n- Beschreiben des Dienstlebenszyklus in Azure"
