--- a/learn-certs-pr/courses/mb-310t02.yml
+++ b/learn-certs-pr/courses/mb-310t02.yml
@@ -1,10 +1,16 @@
 ### YamlMime:Course
-title: Konfigurieren und Verwenden von Kreditoren, Forderungen und Inkasso in Finanzen und Betrieb
+title: Konfigurieren und Verwenden von Kreditoren- und Debitorenkonten sowie Inkassovorgängen in Finanz- und Betriebsabteilungen
 metadata:
-  title: 'Kurs MB-310T02-A: Konfigurieren und Verwenden von Kreditoren, Forderungen und Inkasso in Finanzen und Betrieb'
-  description: 'Kurs MB-310T02-A: Konfigurieren und Verwenden von Kreditoren, Forderungen und Inkasso in Finanzen und Betrieb'
+  title: 'Kurs MB-310T02-A: Konfigurieren und Verwenden von Kreditoren- und Debitorenkonten sowie Inkassovorgängen in Finanz- und Betriebsabteilungen'
+  description: 'Kurs MB-310T02-A: Konfigurieren und Verwenden von Kreditoren- und Debitorenkonten sowie Inkassovorgängen in Finanz- und Betriebsabteilungen'
+  ms.openlocfilehash: db8f47170b0b2cd803446cddf6231f17a2afa609
+  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/14/2021
+  ms.locfileid: "132107331"
 uid: course.mb-310t02
-courseNumber: 'MB-310T02-A'
+courseNumber: MB-310T02-A
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 learningPartnersLink: /learn/certifications/partners
@@ -15,141 +21,241 @@ levels:
 roles:
 - functional-consultant
 products:
-- dynamics
+- dynamics-365
 - dynamics-finance
 exams:
 - uid: exam.mb-310
-summary: |-
-  Unternehmen setzen Dynamics 365 for Finance und Operations zur Steigerung ihrer finanziellen Performance ein, weil es die Rentabilität steigern, die Produktivität ihrer Mitarbeiter optimieren, die Betriebskosten senken, sich schnell an geänderte Anforderungen anpassen und das Asset-Management optimieren kann.
+summary: >-
+  Organisationen nutzen Dynamics 365 for Finance and Operations, um ihre Finanzergebnisse zu verbessern, indem sie die Rentabilität steigern, die Produktivität ihrer Mitarbeiter optimieren, Betriebskosten senken, sich schnell an geänderte Anforderungen anpassen und die Vermögensverwaltung rationalisieren.
 
-  In diesem Kurs wird erläutert, wie Sie Kreditoren, Forderungen und Sammlungen in Dynamics 365 for Finance and Operations konfigurieren und verwenden.
 
-  #### Zielgruppenprofil
-  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
-prerequisitesSection: |-
-  Grundlegendes Verständnis von ERP- und CRM-Konzepten.
-outlineSection: |-
-  ### Modul 1&#58; Kreditorenbuchhaltung konfigurieren
+  In diesem Kurs wird erläutert, wie Kreditoren- und Debitorenkonten sowie Inkassovorgänge in Dynamics 365 for Finance and Operations konfiguriert und verwendet werden.
+
+
+  #### <a name="audience-profile"></a>Zielgruppenprofil
+
+  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Ein Functional Consultant implementiert eine Lösung unter Verwendung von sofort einsatzbereiten Funktionen sowie Anwendungs- und Dienstintegrationen, die sich ohne jeden Programmieraufwand erweitern lässt.
+prerequisitesSection: Grundkenntnisse der ERP- und CRM-Konzepte
+outlineSection: >-
+  ### <a name="module--158-configure-accounts-payable"></a>Modul 1&#58; Konfigurieren von Kreditorenkonten
+
   Dynamics 365 for Finance und Operations bietet umfangreiche Funktionen zum Einrichten verschiedener Zahlungsoptionen für Kreditoren.
-  #### Lektionen
-  - Die Funktionsweise des Task-Rekorders verstehen
-  - Konfigurieren der Kreditorenparameter
-  - Lieferanten erstellen und verwalten
-  - Kreditorenbuchhaltung konfigurieren
-  - Positive Zahlung konfigurieren und verwenden
-  - Übungslabor
-  - Modulübersicht
 
-  In diesem Modul lernen die Studenten, wie man&#58;
-  - Kreditorenkomponenten konfiguriert
-  - Das Erstellen und verwalten einen Lieferanten
-  - Kreditorenzahlungen konfigurieren
-  - Kreditorenbuchungsprofile einrichten
-  - Kreditorenbuchhaltung konfigurieren
+  #### <a name="lessons"></a>Lektionen
+
+  - Verstehen der Funktionsweise der Aufgabenaufzeichnung
+
+  - Konfigurieren der Parameter für Kreditorenkonten
+
+  - Erstellen und Verwalten von Anbietern
+
+  - Konfigurieren von Gebühren für Kreditorenkonten
+
+  - Konfigurieren und Verwenden von Positive Pay
+
+  - Übungs-Lab
+
+  - Zusammenfassung des Moduls
 
 
-  ### Modul 2&#58; Tägliche  Abläufe in der Kreditorenbuchhaltung durchführen
-  Der Einkauf von Waren zum Wiederverkauf, als Material für die Herstellung oder für Dienstleistungen ist eine große Verantwortung. Die Nachverfolgung dieser Einkäufe und die Bezahlung der Lieferanten, die die Waren liefern, ist ebenso anspruchsvoll. Unternehmen müssen die Kreditorenbuchhaltung genau überwachen und Verfahren implementieren, damit das Management auf einfache Weise Finanzinformationen abrufen kann, die sie benötigen, um über Änderungen der Warenkosten informiert zu bleiben. Um einen genauen Überblick über die Finanzlage des Geschäfts zu erhalten, werden alle erfolgswirksamen Aufwendungen in die Verbindlichkeiten einbezogen. In diesem Modul wird erläutert, wie man Vorauszahlungen verwaltet und anwende, Rechnungen erfasst und Zahlungen verarbeitet.
-  #### Lektionen
+  In diesem Modul haben die Kursteilnehmer Folgendes gelernt&#58;
+
+  - Konfigurieren von Komponenten von Kreditorenkonten
+
+  - Erstellen und Verwalten von Anbietern
+
+  - Konfigurieren von Anbieterzahlungen
+
+  - Einrichten von Profilen für Anbieterbuchungen
+
+  - Konfigurieren von Gebühren für Kreditorenkonten
+
+
+
+  ### <a name="module--258-perform-accounts-payable-daily-procedures"></a>Modul 2&#58; Ausführen von täglichen Vorgängen für Kreditorenkonten
+
+  Der Einkauf von Waren zum Wiederverkauf oder als Material für die Fertigung oder für Dienstleistungen ist eine große Verantwortung. Die Nachverfolgung dieser Einkäufe und die Bezahlung der Lieferanten, die die Waren liefern, ist ebenso anspruchsvoll. Unternehmen müssen die Kreditorenbuchhaltung genau überwachen und Verfahren implementieren, damit das Management auf einfache Weise Finanzinformationen abrufen kann, die sie benötigen, um über Änderungen der Warenkosten informiert zu bleiben. Um einen genauen Überblick über die Finanzlage des Geschäfts zu erhalten, werden alle erfolgswirksamen Aufwendungen in die Verbindlichkeiten einbezogen. In diesem Modul wird erläutert, wie man Vorauszahlungen verwaltet und anwende, Rechnungen erfasst und Zahlungen verarbeitet.
+
+  #### <a name="lessons"></a>Lektionen
+
   - Einführung
-  - Bestellungen, Rechnungen und Zahlungen bearbeiten
+
+  - Verarbeiten von Bestellungen, Rechnungen und Zahlungen
+
   - Verwalten und Anwenden von Vorauszahlungen
-  - Übungslabore
-  - Modulübersicht
 
-  In diesem Modul lernten die Studenten, dass man Lieferantenrechnungen manuell eingeben oder elektronisch über eine Dateneinheit empfangen kann. Nachdem die Rechnungen eingegeben oder empfangen wurden, können Sie die Rechnungen mit Hilfe eines Rechnungsgenehmigungsjournals oder mit der Lieferantenrechnung überprüfen und genehmigen. Darüber hinaus haben sie gelernt, wie der Rechnungsabgleich, die Kreditorenrechnungsrichtlinien und der Arbeitsfluss verwendet werden, um den Überprüfungsprozess zu automatisieren, sodass Rechnungen, die bestimmte Kriterien erfüllen, automatisch genehmigt und die verbleibenden Rechnungen zur Überprüfung durch einen autorisierten Benutzer gekennzeichnet werden. Die Studenten lernten auch den Umgang mit Vorauszahlungen an Lieferanten.
+  - Übungs-Labs
 
-  ### Modul 3&#58; Kostenzuordnung und Rechnungsbestätigung verwenden
-  In diesem Modul erfahren Sie, wie Sie Transaktionen abwickeln und die Abwicklung und Verteilung von Geldern mit Hilfe von Kostenzuordnung rückgängig machen. Die Studenten lernen auch, wie ein Rechnungsabgleich durchgeführt wird. Kostenzuordnung wird verwendet, um zu definieren, wie ein Betrag verbucht wird, z. B. wie die Ausgaben, Steuern oder Gebühren auf einer Lieferantenrechnung verbucht werden. Jeder Betrag, der bei der Erfassung der Kreditorenrechnung verbucht werden muss, weist eine oder mehrere Kostenzuordnungen auf.
+  - Zusammenfassung des Moduls
 
-  #### Lektionen
+
+  In diesem Modul haben die Kursteilnehmer gelernt, dass sie Anbieterrechnungen manuell eingeben oder über eine Datenentität elektronisch empfangen können. Nachdem die Rechnungen eingegeben oder empfangen wurden, können sie über ein Genehmigungsjournal für Rechnungen oder die Rechnungsseite des Anbieters überprüft und genehmigt werden. Darüber hinaus haben die Teilnehmer gelernt, wie der Überprüfungsprozess mithilfe von Rechnungsabgleich, Richtlinien für Anbieterrechnungen und Workflows automatisiert werden kann, sodass Rechnungen, die bestimmte Kriterien erfüllen, automatisch genehmigt werden, und die restlichen Rechnungen zur Überprüfung durch einen autorisierten Benutzer gekennzeichnet werden. Die Kursteilnehmer haben außerdem gelernt, wie Vorauszahlungen an Anbieter verarbeitet werden.
+
+
+  ### <a name="module--358-use-accounting-distribution-and-invoice-validations"></a>Modul 3&#58; Verwenden von Kostenzuordnung und Rechnungsprüfungen
+
+  In diesem Modul erfahren Sie, wie Sie Transaktionen abwickeln und die Abwicklung und Verteilung von Geldern mit Hilfe von Kostenzuordnung rückgängig machen. Die Kursteilnehmer lernen auch, wie ein Rechnungsabgleich durchgeführt wird. Kostenzuordnung wird verwendet, um zu definieren, wie ein Betrag verbucht wird, z. B. wie die Ausgaben, Steuern oder Gebühren auf einer Lieferantenrechnung verbucht werden. Jeder Betrag, der bei der Erfassung der Kreditorenrechnung verbucht werden muss, weist eine oder mehrere Kostenzuordnungen auf.
+
+
+  #### <a name="lessons"></a>Lektionen
+
   - Einführung
-  - Transaktion abwickeln und Abrechnungen rückgängig machen
-  - Mittel verteilen
-  - Rechnungsprüfungsrichtlinien konfigurieren
-  - Übungslabore
-  - Modulübersicht
 
-  In diesem Modul lernen die Studenten, wie man&#58;
-  - Transaktionen abwickeln und Abrechnungen rückgängig machen
-  - Gelder mittels Kostenzuordnung verteilen
-  - Rechnungsprüfungsrichtlinien konfigurieren
+  - Abwickeln von Transaktionen und Rückgängigmachen von Zahlungen
+
+  - Verteilen von Mitteln
+
+  - Konfigurieren von Rechnungsprüfungsrichtlinien
+
+  - Übungs-Labs
+
+  - Zusammenfassung des Moduls
 
 
-  ### Modul 4&#58; Debitorenbuchhaltung konfigurieren
-  Das Modul Debitorenbuchhaltung muss so konfiguriert werden, dass Kundenrechnungen erstellt, Lieferscheine gebucht, freie Textrechnungen verwendet werden können, die sich nicht auf Kundenaufträge beziehen, und dass schließlich Zahlungen mit verschiedenen Zahlungsarten wie Bargeld, Schecks, Kreditkarten und elektronische Zahlungen von Kunden geleistet werden können. Dieses Modul enthält Informationen zur Konfiguration wesentlicher Komponenten des Moduls „Debitoren" und zum Kunden-Setup für eine effiziente Verwaltung von Kunden und Kundentransaktionen in Finance and Operations.
+  In diesem Modul haben die Kursteilnehmer Folgendes gelernt&#58;
 
-  #### Lektionen
-  - Debitoren konfigurieren
-  - Kundenkonten anlegen und warten
-  - Kundenbuchungsprofile einrichtet
-  - Konfiguration der Debitorengebühren
-  - Übungslabor
-  - Modulübersicht
+  - Abwickeln von Transaktionen und Rückgängigmachen von Zahlungen
 
-  In diesem Modul lernen die Studenten, wie man&#58;
+  - Verteilen von Mitteln mithilfe von Kostenzuordnungen
+
+  - Konfigurieren von Rechnungsprüfungsrichtlinien
+
+
+
+  ### <a name="module--458-configure-accounts-receivable"></a>Modul 4&#58; Konfigurieren von Debitorenkonten
+
+  Das Modul für Debitorenkonten muss so konfiguriert werden, dass Kundenrechnungen erstellt, Lieferscheine gesendet und Freitextrechnungen verwendet werden können, die sich nicht auf Kundenaufträge beziehen. Außerdem müssen Zahlungen von Kunden über verschiedene Zahlungsarten wie Bargeld, Schecks, Kreditkarten und elektronische Zahlungen empfangen werden können. Dieses Modul enthält Informationen zur Konfiguration wesentlicher Komponenten des Moduls „Debitoren" und zum Kunden-Setup für eine effiziente Verwaltung von Kunden und Kundentransaktionen in Finance and Operations.
+
+
+  #### <a name="lessons"></a>Lektionen
+
+  - Konfigurieren von Debitorenkonten
+
+  - Erstellen und Verwalten von Kunden
+
+  - Einrichten von Profilen für Kundenbuchungen
+
+  - Konfigurieren von Gebühren für Debitorenkonten
+
+  - Übungs-Lab
+
+  - Zusammenfassung des Moduls
+
+
+  In diesem Modul haben die Kursteilnehmer Folgendes gelernt&#58;
+
   - Debitoren konfiguriert
-  - Kundenkonten anlegt und wartet
-  - Kundenzahlungen konfiguriert
-  - Kundenbuchungsprofile einrichtet
-  - Konfiguration der Debitorengebühren
+
+  - Erstellen und Verwalten von Kunden
+
+  - Konfigurieren von Kundenzahlungen
+
+  - Einrichten von Profilen für Kundenbuchungen
+
+  - Konfigurieren von Gebühren für Debitorenkonten
 
 
-  ### Modul 5&#58; Tägliche Abläufe in der Debitorenbuchhaltung durchführen
-  Erfahren Sie, wie Sie freie Textrechnungen erstellen, Zahlungen von Kunden erhalten und bei der Bank einzahlen. Die Studenten lernen auch, wie man einem Kunden einen überzahlten Betrag oder eine Summe aus anderem Grund erstatten kann z. B. ein Kundenrückgabeszenario, bei dem dem Kunden nicht nur die Zahlung, sondern auch die eingezogene Steuer erstattet werden muss, und zwar unter Verwendung von Stornierungen und Verwendung von Transaktionsstornierungen in der Debitorenbuchhaltung. Die Studenten lernen auch, wie sie Gelder mit Hilfe von Kostenzuordnung  in einer freien Textrechnung verteilen.
 
-  #### Lektionen
-  - Erstellen freier Textrechnungen und erfassen von Kundenzahlungen
-  - Transaktionen abwickeln und die Abwicklung rückgängig machen
-  - Übungslabor
-  - Modulübersicht
+  ### <a name="module--558-perform-accounts-receivable-daily-procedures"></a>Modul 5&#58; Ausführen von täglichen Vorgängen für Debitorenkonten
 
-  In diesem Modul lernten die Studenten etwas über&#58;
-  - Gelder mittels Kostenzuordnung verteilen
-  - Erstellen freier Textrechnungen und erfassen von Kundenzahlungen
+  Die Kursteilnehmer lernen, wie sie Freitextrechnungen erstellen, Zahlungen von Kunden empfangen und diese bei der Bank einzahlen. Sie erfahren auch, wie sie Kunden überzahlte Beträge sowie Beträge zurückerstatten, die aus anderen Gründen zurückgegeben werden müssen. Dies kann beispielsweise bei Produktrückgaben durch Kunden der Fall sein: Hier müssen nicht nur die gezahlten Beträge, sondern auch einbehaltene Steuern zurückerstattet werden, und dafür werden Stornierungen sowie Transaktionsstornierungen im Debitorenkonto verwendet. Die Kursteilnehmer lernen auch, wie Mittel mithilfe von Kostenzuordnungen in einer Freitextrechnung verteilt werden.
+
+
+  #### <a name="lessons"></a>Lektionen
+
+  - Erstellen von Freitextrechnungen und Erfassen von Kundenzahlungen
+
+  - Abwickeln von Transaktionen und Rückgängigmachen von Zahlungen
+
+  - Übungs-Lab
+
+  - Zusammenfassung des Moduls
+
+
+  In diesem Modul haben die Kursteilnehmer Folgendes gelernt&#58;
+
+  - - Gelder mittels Kostenzuordnung verteilen
+
+  - Erstellen von Freitextrechnungen und Erfassen von Kundenzahlungen
+
   - Konfigurieren wiederkehrender Rechnungen
-  - Stornos in der Debitorenbuchhaltung verwenden
-  - Bestellungen bearbeiten, Rechnungen erfassen und Zahlungen bearbeiten
+
+  - Verwenden von Stornos in Debitorenkonten
+
+  - Bearbeiten von Bestellungen, Erfassen von Rechnungen und Bearbeiten von Zahlungen
 
 
-  ### Modul 6&#58; Kredit und Inkasso konfigurieren
-  Obwohl die meisten Kunden ihre Rechnungen pünktlich bezahlen, muss es möglich sein, Rechnungen zu verarbeiten, die nicht bis zu ihrem jeweiligen Fälligkeitsdatum bezahlt werden. In diesem Abschnitt wird erläutert, wie Sie überfällige Kunden verwalten, indem Sie das Modul „Guthaben und Inkasso" in Dynamics 365 for Finance and Operations konfigurieren. Um das Modul Guthaben und Inkasso nutzen zu können, muss die Konfiguration der Forderungen bereits abgeschlossen sein.
 
-  #### Lektionen
+  ### <a name="module--658-configure-credit-and-collections"></a>Modul 6&#58; Konfigurieren von Guthaben und Inkassovorgängen
+
+  Obwohl die meisten Kunden ihre Rechnungen pünktlich bezahlen, muss es möglich sein, Rechnungen zu verarbeiten, die nicht bis zu ihrem jeweiligen Fälligkeitsdatum bezahlt werden. In diesem Abschnitt wird erläutert, wie Sie überfällige Kunden verwalten, indem Sie das Modul „Guthaben und Inkasso" in Dynamics 365 for Finance and Operations konfigurieren. Um das Modul für Guthaben und Inkassovorgänge verwenden zu können, muss die Konfiguration der Debitorenkonten bereits abgeschlossen sein.
+
+
+  #### <a name="lessons"></a>Lektionen
+
   - Einführung
-  - Kredit- und Inkassokomponenten konfiguriert
-  - Einrichten und Verwalten von Interessen
-  - Aufheben, wiedereinsetzen oder umkehren
-  - Einrichten und Verwalten von Inkassoschreiben
-  - Übungslabor
-  - Modulübersicht
 
-  In diesem Modul lernen die Studenten, wie man&#58;
-  - Kredit- und Inkassokomponenten konfiguriert
-  - Konfigurieren Sie Restantenlisten, Kundenpools, Inkassoagenten und definition von Restantenzeiträumen
-  - Interessen einrichten und verwalten
+  - Konfigurieren von Komponenten für Guthaben und Inkassovorgänge
+
+  - Einrichten und Verwalten von Zinsen
+
+  - Erlassen, erneutes Einfordern oder Stornieren
+
   - Einrichten und Verwalten von Inkassoschreiben
 
+  - Übungs-Lab
 
-  ### Modul 7&#58; Kredit und Inkasso bearbeiten
+  - Zusammenfassung des Moduls
+
+
+  In diesem Modul haben die Kursteilnehmer Folgendes gelernt&#58;
+
+  - Konfigurieren von Komponenten für Guthaben und Inkassovorgänge
+
+  - Konfigurieren von Fälligkeitslisten, Kundenpools, Inkassobeauftragten und Definition von Fälligkeitszeiträumen
+
+  - Einrichten und Verwalten von Zinsen
+
+  - Einrichten und Verwalten von Inkassoschreiben
+
+
+
+  ### <a name="module--758-process-credit-and-collections"></a>Modul 7&#58; Verarbeiten von Guthaben und Inkassovorgängen
+
   Obwohl die meisten Kunden ihre Rechnungen pünktlich bezahlen, muss es möglich sein, Rechnungen zu verarbeiten, die nicht bis zu ihrem jeweiligen Fälligkeitsdatum bezahlt werden. In diesem Abschnitt wird die Verarbeitung von Gutschriften und Sammlungen erläutert.
-  #### Lektionen
+
+  #### <a name="lessons"></a>Lektionen
+
   - Einführung
-  - Verstehen, wie Sammlungen verarbeitet werden
-  - Verwalten von Kundenkrediten und -sammlungen
-  - Übungslabore
-  - Modulübersicht
 
-  In diesem Modul lernten die Schüler etwas über&#58;
+  - Verstehen, wie Inkassovorgänge verarbeitet werden
+
+  - Verwalten von Guthaben und Inkassovorgängen für Kunden
+
+  - Übungs-Labs
+
+  - Zusammenfassung des Moduls
+
+
+  In diesem Modul haben die Kursteilnehmer Folgendes gelernt&#58;
+
   - Kundenstatements
-  - Wie man ein Inkasso verarbeitet
+
+  - Verarbeiten von Inkassovorgängen
 
 
-  ### Modul 8&#58; Abschluss des Kurses
+
+  ### <a name="module--858-course-conclusion"></a>Modul 8&#58; Abschluss des Kurses
+
   Abschließende Bewertung und Kurszusammenfassung sowie eine Umfrage nach dem Kurs.
-  #### Lektionen
+
+  #### <a name="lessons"></a>Lektionen
+
   - Abschließende Bewertung
+
   - Kurszusammenfassung
+
   - Umfrage nach dem Kurs
+
 
   Die Kursteilnehmer haben den Kurs abgeschlossen.
