--- a/learn-certs-pr/mta-introduction-to-programming-using-java/index.yml
+++ b/learn-certs-pr/mta-introduction-to-programming-using-java/index.yml
@@ -3,21 +3,28 @@ title: 'MTA: Introduction to Programming Using Java'
 metadata:
   title: 'MTA: Introduction to Programming Using Java'
   description: 'MTA: Introduction to Programming Using Java'
+  ms.openlocfilehash: aa1c6e4fee0f6e283d8879d4eb419099e6c9773c
+  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/14/2021
+  ms.locfileid: "132111125"
 uid: certification.mta-introduction-to-programming-using-java
 iconUrl: /media/learn/certification/badges/mta-badge.svg
-summary: |-
-  <div><font color='red'><strong>Diese MTA -Prüfung wird am 30. Juni 2022 eingestellt. Der Verkauf von Gutscheinen für diese Prüfung endete am 30. Juni 2021. Verwenden Sie die Schaltflächen „Termin mit Pearson VUE" oder „Termin mit Certiport" unten, um einen erworbenen Gutschein einzulösen und Ihre Prüfung zu planen. Beziehen Sie sich auf <a href="/learn/certifications/mta-retirement-faqs">die FAQ</a> für weitere Details.</strong></font></br></br></div>
+summary: >-
+  <div><font color='red'><strong>Diese MTA-Zertifizierung wird am 30. Juni 2022 eingestellt. Die Gutscheinverkäufe für die zugehörige Prüfung endeten am 30. Juni 2021. Verwenden Sie die Schaltfläche „Mit Pearson VUE planen“ oder „Mit Certiport planen“, um einen erworbenen Gutschein einzulösen und Ihre Prüfung zu planen. Weitere Informationen finden Sie in den <a href="/learn/certifications/mta-retirement-faqs">häufig gestellten Fragen</a>.</strong></font></br></br></div>
 
-  MTA-Zertifizierungen sind ein guter Ausgangspunkt, wenn Sie in den Technologiebereich einsteigen möchten. Die MTA-Zertifizierungen decken ein breites Spektrum grundlegender technischer Konzepte ab, bewerten und validieren das technische Kernwissen und erhöhen die technische Glaubwürdigkeit. Hinweis&#58; MTA-Prüfungen qualifizieren Sie weder für eine MCP-Zertifizierung, noch sind sie eine Voraussetzung für MCSA- oder MCSD-Zertifizierungen.
-subTitle: 'MTA-Zertifizierungen sind ein guter Ausgangspunkt, wenn Sie in den Technologiebereich einsteigen möchten. Die MTA-Zertifizierungen decken ein breites Spektrum grundlegender technischer Konzepte ab, bewerten und validieren das technische Kernwissen und erhöhen die technische Glaubwürdigkeit. Note: MTA-Prüfungen qualifizieren Sie weder für eine MCP-Zertifizierung, noch sind sie eine Voraussetzung für MCSA- oder MCSD-Zertifizierungen.'
+
+  MTA-Zertifizierungen sind ein guter Ausgangspunkt, wenn Sie in den Technologiebereich einsteigen möchten. Die MTA-Zertifizierungen decken ein breites Spektrum grundlegender technischer Konzepte ab, bewerten und validieren das technische Kernwissen und erhöhen die technische Glaubwürdigkeit. Hinweis: MTA-Prüfungen qualifizieren Sie weder für eine MCP-Zertifizierung, noch sind sie eine Voraussetzung für MCSA- oder MCSD-Zertifizierungen.
+subTitle: 'MTA-Zertifizierungen sind ein guter Ausgangspunkt, wenn Sie in den Technologiebereich einsteigen möchten. Die MTA-Zertifizierungen decken ein breites Spektrum grundlegender technischer Konzepte ab, bewerten und validieren das technische Kernwissen und erhöhen die technische Glaubwürdigkeit. Hinweis: MTA-Prüfungen qualifizieren Sie weder für eine MCP-Zertifizierung, noch sind sie eine Voraussetzung für MCSA- oder MCSD-Zertifizierungen.'
 levels:
 - beginner
 skills:
-- Java-Grundlagen verstehen
-- Arbeiten mit Datentypen, Variablen und Ausdrücken 
-- Durchflusskontrolle der Maschine implementieren 
-- Objektorientierte Programmierung durchführen 
-- Kompilieren und Debuggen von Code
+- Understand Java fundamentals
+- Work with data types, variables, and expressions
+- Implement flow control
+- Perform object-oriented programming
+- Compile and debug code
 roles:
 - developer
 type: mta
@@ -42,6 +49,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Ihrer Zertifizierungsbadges
+  description: Feiern Sie Ihren Erfolg in Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise LinkedIn oder Ihrem Lebenslauf hinzu.
   href: ../badges.md
