--- a/learn-certs-pr/mta-introduction-to-programming-using-python/index.yml
+++ b/learn-certs-pr/mta-introduction-to-programming-using-python/index.yml
@@ -3,22 +3,29 @@ title: 'MTA: Introduction to Programming Using Python'
 metadata:
   title: 'MTA: Introduction to Programming Using Python'
   description: 'MTA: Introduction to Programming Using Python'
+  ms.openlocfilehash: 75da20e2b7efd482c6f8af5945faa7a17ca655b5
+  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/14/2021
+  ms.locfileid: "132111984"
 uid: certification.mta-introduction-to-programming-using-python
 iconUrl: /media/learn/certification/badges/mta-badge.svg
-summary: |-
-  <div><font color='red'><strong>Diese MTA -Prüfung wird am 30. Juni 2022 eingestellt. Der Verkauf von Gutscheinen für diese Prüfung endete am 30. Juni 2021. Verwenden Sie die Schaltflächen „Termin mit Pearson VUE" oder „Termin mit Certiport" unten, um einen erworbenen Gutschein einzulösen und Ihre Prüfung zu planen. Beziehen Sie sich auf <a href="/learn/certifications/mta-retirement-faqs">die FAQ</a> für weitere Details.</strong></font></br></br></div>
-  
-  MTA-Zertifizierungen sind ein guter Ausgangspunkt, wenn Sie in den Technologiebereich einsteigen möchten. Die MTA-Zertifizierungen decken ein breites Spektrum grundlegender technischer Konzepte ab, bewerten und validieren das technische Kernwissen und erhöhen die technische Glaubwürdigkeit. Hinweis&#58; MTA-Prüfungen qualifizieren Sie weder für eine MCP-Zertifizierung, noch sind sie eine Voraussetzung für MCSA- oder MCSD-Zertifizierungen.
-subTitle: 'MTA-Zertifizierungen sind ein guter Ausgangspunkt, wenn Sie in den Technologiebereich einsteigen möchten. Die MTA-Zertifizierungen decken ein breites Spektrum grundlegender technischer Konzepte ab, bewerten und validieren das technische Kernwissen und erhöhen die technische Glaubwürdigkeit. Note: MTA-Prüfungen qualifizieren Sie weder für eine MCP-Zertifizierung, noch sind sie eine Voraussetzung für MCSA- oder MCSD-Zertifizierungen.'
+summary: >-
+  <div><font color='red'><strong>Diese MTA-Zertifizierung wird am 30. Juni 2022 eingestellt. Die Gutscheinverkäufe für die zugehörige Prüfung endeten am 30. Juni 2021. Verwenden Sie die Schaltfläche „Mit Pearson VUE planen“ oder „Mit Certiport planen“, um einen erworbenen Gutschein einzulösen und Ihre Prüfung zu planen. Weitere Informationen finden Sie in den <a href="/learn/certifications/mta-retirement-faqs">häufig gestellten Fragen</a>.</strong></font></br></br></div>
+
+
+  MTA-Zertifizierungen sind ein guter Ausgangspunkt, wenn Sie in den Technologiebereich einsteigen möchten. Die MTA-Zertifizierungen decken ein breites Spektrum grundlegender technischer Konzepte ab, bewerten und validieren das technische Kernwissen und erhöhen die technische Glaubwürdigkeit. Hinweis: MTA-Prüfungen qualifizieren Sie weder für eine MCP-Zertifizierung, noch sind sie eine Voraussetzung für MCSA- oder MCSD-Zertifizierungen.
+subTitle: 'MTA-Zertifizierungen sind ein guter Ausgangspunkt, wenn Sie in den Technologiebereich einsteigen möchten. Die MTA-Zertifizierungen decken ein breites Spektrum grundlegender technischer Konzepte ab, bewerten und validieren das technische Kernwissen und erhöhen die technische Glaubwürdigkeit. Hinweis: MTA-Prüfungen qualifizieren Sie weder für eine MCP-Zertifizierung, noch sind sie eine Voraussetzung für MCSA- oder MCSD-Zertifizierungen.'
 levels:
 - beginner
 skills:
-- Operationen mit Datentypen und Operatoren durchführen 
-- Kontrollfluss mit Entscheidungen und Schleifen 
-- Input- und Output-Operationen durchführen 
-- Dokumenten- und Strukturkodex 
-- Führen Sie Fehlersuche und Fehlerbehandlung durch
-- Operationen mit Modulen und Tools ausführen
+- Perform Operations using Data Types and Operators
+- Control Flow with Decisions and Loops
+- Perform Input and Output Operations
+- Document and Structure Code
+- Perform Troubleshooting and Error Handling
+- Perform Operations Using Modules and Tools
 roles:
 - developer
 type: mta
@@ -43,6 +50,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Ihrer Zertifizierungsbadges
+  description: Feiern Sie Ihren Erfolg in Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise LinkedIn oder Ihrem Lebenslauf hinzu.
   href: ../badges.md
